--- a/public/css/admin/users.css
+++ b/public/css/admin/users.css
@@ -4,32 +4,13 @@ header {
   align-items: center;
 }
 .new-user {
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  position: relative;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  outline: 0px;
-  border: 0px;
-  cursor: pointer;
-  vertical-align: middle;
-  appearance: none;
-  text-decoration: none;
+  outline: none;
+  border: none;
   font-weight: 700;
-  line-height: 1.71429;
-  font-size: 0.875rem;
-  text-transform: capitalize;
-  font-family: "Public Sans", sans-serif;
-  min-width: 64px;
-  padding: 6px 16px;
-  border-radius: 6px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  color: rgb(255, 255, 255);
   background-color: rgb(32, 101, 209);
   box-shadow: rgba(32, 101, 209, 0.24) 0px 8px 16px 0px;
 }
@@ -88,32 +69,12 @@ header {
   margin-right: 10px;
 }
 #submit {
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  position: relative;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  outline: 0px;
-  border: 0px;
-  cursor: pointer;
-  vertical-align: middle;
-  appearance: none;
-  text-decoration: none;
-  font-weight: 700;
-  line-height: 1.71429;
-  font-size: 0.875rem;
-  text-transform: capitalize;
-  font-family: "Public Sans", sans-serif;
-  min-width: 64px;
-  padding: 6px 16px;
-  border-radius: 6px;
+  outline: none;
+  border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
     color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  color: rgb(255, 255, 255);
   background-color: rgb(45, 182, 27);
   box-shadow: rgba(38, 209, 32, 0.24) 0px 8px 16px 0px;
   margin-top: 10px;
