--- a/public/css/registration/login.css
+++ b/public/css/registration/login.css
@@ -1,9 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
 body {
   background-color: rgb(0, 0, 0);
   background-image: url("/img/bg2.jpg");
@@ -24,16 +18,13 @@ body::after {
   opacity: 0.7;
   z-index: 1;
 }
-#login {
-  font-size: 30px;
-}
-form {
+.container {
   width: 400px;
-  background-color: rgba(255, 255, 255, 0.03);
   position: absolute;
-  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.03);
   border-radius: 10px;
   backdrop-filter: blur(25px);
   border: 2px solid rgba(255, 255, 255, 0.1);
@@ -43,26 +34,24 @@ form {
 }
 form * {
   color: #ffffff;
-  letter-spacing: 0.5px;
   outline: none;
   border: none;
 }
-form h1,
+.notAllowed {
+  color: red;
+  margin: 5px;
+}
+h1,
 h2 {
+  color: #ffffff;
   font-size: 32px;
   font-weight: 500;
-  line-height: 42px;
   text-align: center;
-}
-.contanier {
-  display: flex;
-  gap: 10px;
 }
 label {
   display: block;
   margin-top: 8px;
   font-size: 15px;
-  font-weight: 500;
 }
 input {
   display: block;
@@ -75,23 +64,18 @@ input {
   font-size: 14px;
   font-weight: 300;
 }
-.conatiner {
+.pass {
   position: relative;
 }
 .eye {
   position: absolute;
-  top: 73%;
+  top: 70%;
   right: 20px;
   transform: translateY(-50%);
   cursor: pointer;
 }
 #closedEye {
   display: none;
-}
-.forgotpass {
-  display: flex;
-  justify-content: flex-end;
-  padding-top: 10px;
 }
 a {
   font-size: 13px;
@@ -101,32 +85,32 @@ a:hover,
 a:focus {
   text-decoration: underline;
 }
-#error {
-  margin-top: 24px;
+.forgetpassword,
+.sign-up {
+  display: block;
+  margin-top: 5px;
+  width: 100%;
 }
-button {
+.forgetpassword {
+  text-align: end;
+}
+#error {
+  margin-top: 20px;
+}
+.sign-in {
   margin: 20px 0;
   width: 100%;
-  background-color: #ffffff;
-  color: #080710;
+  background-color: white;
+  color: black;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
-  border-radius: 5px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: rgb(236, 235, 235);
-}
-.signupanchor {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
 }
 .or {
   text-align: center;
   color: lightgrey;
   position: relative;
+  margin: 15px;
 }
 .or::after,
 .or::before {
@@ -143,31 +127,16 @@ button:hover {
 .or::after {
   left: 40px;
 }
+.sign-up {
+  text-align: center;
+}
 .social {
   display: flex;
-  justify-content: center;
-}
-.social div {
-  margin: 10px 20px;
-}
-.sign-in {
-  display: block;
-  color: white;
-  text-decoration: none;
-  font-size: 11px;
-  width: 100%;
-  margin-top: 10px;
-}
-.sign-in:hover {
-  text-decoration: underline;
+  justify-content: space-around;
 }
 .google {
   background-color: #db4437;
-  padding: 10px 20px;
-  cursor: pointer;
 }
 .facebook {
   background-color: #4267b2;
-  padding: 10px 20px;
-  cursor: pointer;
 }
