--- a/public/css/registration/signup.css
+++ b/public/css/registration/signup.css
@@ -1,9 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
 body {
   background-color: rgb(0, 0, 0);
   background-image: url("/img/bg2.jpg");
@@ -24,48 +18,43 @@ body::after {
   opacity: 0.7;
   z-index: 1;
 }
-#signup {
-  font-size: 25px;
-}
-form {
+.container {
   width: 400px;
-  background-color: rgba(255, 255, 255, 0.03);
   position: absolute;
-  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.03);
   border-radius: 10px;
   backdrop-filter: blur(25px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 15px 25px;
+  padding: 30px 30px;
   z-index: 2;
 }
 form * {
   color: #ffffff;
-  letter-spacing: 0.5px;
   outline: none;
   border: none;
 }
-.title {
-  margin-bottom: 20px;
+.title{
+  margin-bottom: 10px;
 }
-form h1,
+h1,
 h2 {
+  color: #ffffff;
   font-size: 32px;
   font-weight: 500;
-  line-height: 42px;
   text-align: center;
+}
+.names {
+  display: flex;
+  gap: 10px;
 }
 label {
   display: block;
   margin-top: 8px;
   font-size: 15px;
-  font-weight: 500;
-}
-.names {
-  display: flex;
-  gap: 10px;
 }
 input {
   display: block;
@@ -78,55 +67,44 @@ input {
   font-size: 14px;
   font-weight: 300;
 }
-.password-input {
+.pass {
   position: relative;
 }
 .eye {
   position: absolute;
   top: 70%;
-  right: 13px;
+  right: 20px;
   transform: translateY(-50%);
   cursor: pointer;
 }
 #closedEye {
   display: none;
 }
-.recaptcha {
-  width: 95%;
-  text-align: center;
-  margin: 10px;
-}
-.g-recaptcha {
-  width: fit-content;
-  margin: 0 auto;
-}
-#error {
-  margin-top: 24px;
-}
-.signinanchor {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 20px;
-}
 a {
+  display: block;
   font-size: 13px;
   text-decoration: none;
+  width: 100%;
+  text-align: center;
 }
 a:hover,
 a:focus {
   text-decoration: underline;
 }
-button {
-  margin-top: 20px 0;
+#error {
+  margin-top: 20px;
+}
+.recaptcha {
+  width: 95%;
+  text-align: center;
+  margin: 10px;
+}
+.sign-up {
+  margin: 20px 0;
   width: 100%;
-  background-color: #ffffff;
-  color: #080710;
+  background-color: white;
+  color: black;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
-  border-radius: 5px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: rgb(236, 235, 235);
 }
