--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/admin/nav.css" />
+    <link rel="stylesheet" href="/css/admin/settings.css" />
+    <title>Admin-Settings</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/admin/nav.css" />
-  <link rel="stylesheet" href="/css/admin/settings.css" />
-  <title>Admin-Settings</title>
-</head>
-
-<body>
-  <%- include("./nav.ejs") %>
+  <body>
+    <%- include("./nav.ejs") %>
     <main>
       <div class="container-xl px-4 mt-4">
         <nav class="nav nav-borders">
@@ -32,7 +39,11 @@
             <div class="card mb-4 mb-xl-0">
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
-                <form action="upload.php" method="post" enctype="multipart/form-data">
+                <form
+                  action="upload.php"
+                  method="post"
+                  enctype="multipart/form-data"
+                >
                   <label for="fileToUpload">
                     <div class="profile-pic">
                       <span class="profilePicture"></span>
@@ -56,38 +67,64 @@
               <div class="card-header">Account Details</div>
               <div class="card-body">
                 <form id="UpdateProfile_Form">
-                  <div class="mb-3">
-                    <label class="small mb-1" for="Username">Username (How your name will appear to other users on the
-                      site)</label>
-                    <input class="form-control" id="Username" type="text" placeholder="Enter your username" />
-                    <span id="errorUsername" class="error"></span>
-                  </div>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
-                      <label class="small mb-1" for="First Name">First name</label>
-                      <input class="form-control" id="First Name" type="text" placeholder="Enter your first name" />
+                      <label class="small mb-1" for="First Name"
+                        >First name</label
+                      >
+                      <input
+                        class="form-control"
+                        id="firstName"
+                        type="text"
+                        placeholder="Enter your first name"
+                      />
                       <span id="errorFirstname" class="error"></span>
                     </div>
                     <div class="col-md-6">
-                      <label class="small mb-1" for="Last Name">Last name</label>
-                      <input class="form-control" id="Last Name" type="text" placeholder="Enter your last name" />
+                      <label class="small mb-1" for="Last Name"
+                        >Last name</label
+                      >
+                      <input
+                        class="form-control"
+                        id="lastName"
+                        type="text"
+                        placeholder="Enter your last name"
+                      />
                       <span id="errorlastname" class="error"></span>
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label class="small mb-1" for="Email Address">Email address</label>
-                    <input class="form-control" id="Email Address" type="email"
-                      placeholder="Enter your email address" />
+                    <label class="small mb-1" for="Email Address"
+                      >Email address</label
+                    >
+                    <input
+                      class="form-control"
+                      id="email"
+                      type="email"
+                      placeholder="Enter your email address"
+                    />
                   </div>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
                       <label class="small mb-1" for="Phone">Phone number</label>
-                      <input class="form-control" id="Phone" type="tel" placeholder="Enter your phone number" />
+                      <input
+                        class="form-control"
+                        id="Phone"
+                        type="tel"
+                        placeholder="Enter your phone number"
+                      />
                     </div>
                     <div class="col-md-6">
-                      <label class="small mb-1" for="inputBirthday">Birthday</label>
-                      <input class="form-control" id="inputBirthday" type="date" name="birthday"
-                        placeholder="Enter your birthday" />
+                      <label class="small mb-1" for="inputBirthday"
+                        >Birthday</label
+                      >
+                      <input
+                        class="form-control"
+                        id="inputBirthday"
+                        type="date"
+                        name="birthday"
+                        placeholder="Enter your birthday"
+                      />
                     </div>
                   </div>
                   <button class="btn btn-primary" type="submit">
@@ -104,10 +141,10 @@
 
     <script>
       const userName = document.getElementById("Username");
-      const firstName = document.getElementById("First Name");
-      const lastName = document.getElementById("Last Name");
+      const firstName = document.getElementById("firstName");
+      const lastName = document.getElementById("lastName");
       const myForm = document.getElementById("UpdateProfile_Form");
-      const email = document.getElementById("Email Address");
+      const email = document.getElementById("email");
 
       const errorUsername = document.getElementById("errorUsername");
 
@@ -174,26 +211,39 @@
         return input.id.charAt(0).toUpperCase() + input.id.slice(1);
       }
 
-      myForm.addEventListener("submit", (e) => {
+      myForm.addEventListener("submit", async (e) => {
+        console.log("ccc");
         e.preventDefault();
-        checkRequired([
-          userName,
-          email,
-          firstName,
-          lastName,
-        ]);
-        checkLength(userName, 4, 15);
-        checkLength(lastName, 4, 15);
-        checkEmail(email);
-
-        if (userName.value === "" || userName.value == null) {
-          errorUsername.innerHTML = "User name is required";
-        }
-        if (message.length > 0) {
-          errorMessage.innerText = message.join(", ");
+        // checkRequired([userName, email, firstName, lastName]);
+        // checkLength(userName, 4, 15);
+        // checkLength(lastName, 4, 15);
+        // checkEmail(email);
+        // if (userName.value === "" || userName.value == null) {
+        //   errorUsername.innerHTML = "User name is required";
+        // }
+        // if (message.length > 0) {
+        //   errorMessage.innerText = message.join(", ");
+        // }
+        try {
+          const res = await fetch("/admin/settings", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              email: document.getElementById("email").value,
+              firstName: document.getElementById("firstName").value,
+              lastName: document.getElementById("lastName").value,
+            }),
+          });
+          const data = await res.json();
+          if (data.msg) {
+            alert(data.msg);
+          }
+        } catch (err) {
+          console.log(err);
         }
       });
     </script>
-</body>
-
+  </body>
 </html>
