--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -10,8 +10,9 @@
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
+      />
+      <link rel="stylesheet" href="/css/general.css" />
+      <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Admin-Dashboard</title>
   </head>
   <body>
