--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -17,6 +17,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <link rel="stylesheet" href="/css/admin/settings.css" />
     <title>Admin-Settings</title>
@@ -127,10 +128,12 @@
                       />
                     </div>
                   </div>
-                  <button class="btn btn-primary" type="submit">
-                    Save changes
-                  </button>
-                  <button class="btn clear_btn" type="button">Clear</button>
+                  <div class="btns">
+                    <button class="btn btn-primary" type="submit">
+                      Save changes
+                    </button>
+                    <button class="btn clear_btn" type="button">Clear</button>
+                  </div>
                 </form>
               </div>
             </div>
