--- a/views/admin/notifications.ejs
+++ b/views/admin/notifications.ejs
@@ -17,6 +17,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/notifications.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Notifications</title>
@@ -59,10 +60,12 @@
                       tempore?
                     </p>
                   </div>
-                  <button class="btn btn-primary" type="submit">
-                    Save changes
-                  </button>
-                  <button class="btn clear_btn" type="button">Reset</button>
+                  <div class="btns">
+                    <button class="btn btn-primary" type="submit">
+                      Save changes
+                    </button>
+                    <button class="btn clear_btn" type="button">Reset</button>
+                  </div>
                 </form>
               </div>
             </div>
