--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -17,6 +17,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/security.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Security</title>
@@ -120,10 +121,12 @@
                         <span id="errorConPassword" class="error"></span>
                       </div>
                     </div>
-                    <button class="btn btn-primary" type="submit">
-                      Save changes
-                    </button>
-                    <button class="btn clear_btn" type="clear">Clear</button>
+                    <div class="btns">
+                      <button class="btn btn-primary" type="submit">
+                        Save changes
+                      </button>
+                      <button class="btn clear_btn" type="clear">Clear</button>
+                    </div>
                   </form>
                 </div>
               </div>
