innercourse oage and css

--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -1,14 +1,14 @@
 <header>
     <!--Navigation-->
     <nav id="nav">
-        <img src="images/DSK-JF-light-logo.png" alt="" />
+        <img src="/img/DSK-JF-light-logo.png" alt="" />
         <div class="navigation">
             <div class="items">
                 <i class="fas fa-bell"></i> <!-- Replace with your notifications icon -->
                 <i class="fas fa-envelope"></i> <!-- Replace with your messages icon -->
             </div>
             <div class="profile">
-                <img src="images/user.png" alt="user image" onclick="showMenu()" id="profilePic" />
+                <img src="/img/defaultPP.png" alt="user image" onclick="showMenu()" id="profilePic" />
                 <div class="list" id="profileMenu">
                     <ul>
                         <li><a href="#">Profile</a></li>
