--- a/public/css/student/settings.css
+++ b/public/css/student/settings.css
@@ -125,3 +125,9 @@ body::-webkit-scrollbar {
 #gh {
   color: #24292f;
 }
+.custom-toast {
+    /* Add your custom styles here */
+    background-color: #ff0000;
+    color: #ffffff;
+    /* Add more styles as needed */
+}
