--- a/views/student/settings.ejs
+++ b/views/student/settings.ejs
@@ -18,6 +18,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/student/settings.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <title>Student-Settings</title>
   </head>
 
@@ -288,8 +293,23 @@
             }),
           });
           const data = await res.json();
-          if (data.msg) {
-            alert(data.msg);
+          if (data.msg || data.errMsg) {
+            let toastText = "";
+            if (data.msg) {
+              toastText += data.msg + " ";
+            }
+            if (data.errMsg) {
+              toastText += data.errMsg;
+            }
+
+            Toastify({
+              text: toastText,
+              duration: 3000, // Display duration in milliseconds
+              gravity: "top", // Display position (top, bottom, or center)
+              close: true, // Show a close button
+              backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)", // Customize the background color
+              className: "custom-toast", // Add a custom CSS class for styling
+            }).showToast();
           }
         } catch (err) {
           console.log(err);
