--- a/public/css/student/home.css
+++ b/public/css/student/home.css
@@ -112,17 +112,12 @@ nav .items i:hover {
 
 /*Secondary nav */
 .secondary-nav {
-  position: fixed;
-  width: 100%;
-  background-color: rgb(24, 24, 49);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 9rem 2rem 0rem 2rem;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
   transition: 0.3s;
-  z-index: 99;
+  z-index: 99; 
 }
 .secondary-nav ul {
   list-style: none;
@@ -134,7 +129,7 @@ nav .items i:hover {
   margin-right: 10px;
 }
 .secondary-nav a {
-  color: #fff;
+  color: black;
   text-decoration: none;
   padding: 8px;
   transition: 0.3s;
@@ -214,7 +209,7 @@ nav .items i:hover {
 }
 /* start of main */
 main {
-  padding: 15rem;
+  padding: 9rem 15rem 0rem 15rem ;
   height: 100vh;
 }
 /* course */
